Projects page configured

--- a/White/src/products.html
+++ b/White/src/products.html
@@ -642,11 +642,15 @@
 </div> -->
 
 <!-- Device USP -->
-<div class="usp1Head container-fluid">Universal Selling Point</div>
+
 <div class="usp1 container-fluid">
-  <div class="row r0">
-     <div class="card card_usp">
-       <div class="card-content">
+  <div class="row r0" align="center">
+
+       <div class="col-sm-1"></div>
+       <div class="col-sm-10">
+         <div class="usp1Head container-fluid">Universal Selling Point</div>
+       <div class="card card_usp">
+       <div class="card-content" align="left">
 
          <ul>
            <li>1. Completely Indigenized Indian Design (Patented*)</li>
@@ -656,13 +660,16 @@
            <li>5. Lowest Power / Sq Meters</li>
            <li>6. Inbuilt Soft start to limit in-rush current and provide stable operation over life</li>
            <li>7. Temperature Controllerd Force cooling for increased life of cooling fans.</li>
-         </ul>
+        </ul>
 
        </div>
+     </div>
+     <div class="col-sm-1"></div>
       </div>
    </div>
+
  </div>
- <br><br>
+<div class="sec2 part2">
  <div class="table2Head container-fluid" align="left"><b>Product Specifications</b></div><br>
  <div class="container-fluid feat2" align="center">
    <div>
@@ -694,7 +701,7 @@
           </table>
           </div>
 </div>
-
+</div>
 <!-- End of Device USP -->
 
 
@@ -862,32 +869,40 @@
 
 
 <!-- Device USP -->
-<div class="usp1Head container-fluid">Universal Selling Point</div>
+
 <div class="usp1 container-fluid">
-  <div class="row">
-     <div class="card card_usp">
-       <div class="card-content">
+  <div class="row r0" align="center">
+
+       <div class="col-sm-1"></div>
+       <div class="col-sm-10">
+         <div class="usp1Head container-fluid">Universal Selling Point</div>
+       <div class="card card_usp">
+       <div class="card-content" align="left">
 
          <ul>
-					<li>1. Single Control Card to drive 192x128 LED matrix. </li>
-					<li>2. 1:4 scanning rate with up to 700 Hz refresh rate.</li>
-					<li>3. Supported communication – LAN / Wi-Fi or GPRS</li>
-					<li>4. Internal System Memory – 1MB, Storage Memory – 16 MB, SRAM – 256 KB</li>
-					<li>5. Remote debugging to diagnose problems remotely.</li>
-					<li>6. Smart self diagnostic feature.</li>
-					<li>8. FOTA (firmware updating via GPRS).</li>
-					<li>9. Can pick images/data from any TCP/HTTP/FTP servers via LAN / Wi-Fi / GPRS.</li>
-					<li>11. Auto / manual paging.</li>
-					<li>12. Directivity – 90°(H) 45° (V)</li>
-					<li>13. Visibility – 50 Meters or more</li>
-					<li>14. Brightness &gt; 5000 NIT</li>
-					<li>15. LED life – 100000 Hours</li>
-       		  </ul>
+           <li>1. Single Control Card to drive 192x128 LED matrix. </li>
+ 					<li>2. 1:4 scanning rate with up to 700 Hz refresh rate.</li>
+ 					<li>3. Supported communication – LAN / Wi-Fi or GPRS</li>
+ 					<li>4. Internal System Memory – 1MB, Storage Memory – 16 MB, SRAM – 256 KB</li>
+ 					<li>5. Remote debugging to diagnose problems remotely.</li>
+ 					<li>6. Smart self diagnostic feature.</li>
+ 					<li>8. FOTA (firmware updating via GPRS).</li>
+ 					<li>9. Can pick images/data from any TCP/HTTP/FTP servers via LAN / Wi-Fi / GPRS.</li>
+ 					<li>11. Auto / manual paging.</li>
+ 					<li>12. Directivity – 90°(H) 45° (V)</li>
+ 					<li>13. Visibility – 50 Meters or more</li>
+ 					<li>14. Brightness &gt; 5000 NIT</li>
+ 					<li>15. LED life – 100000 Hours</li>
+        </ul>
 
        </div>
+     </div>
+     <div class="col-sm-1"></div>
       </div>
    </div>
+
  </div>
+ <div class="sec2 part2">
  <div class="table2Head container-fluid" align="left"><b>Product Specifications</b></div><br>
  <div class="container-fluid feat2" align="center">
    <div>
