--- a/White/src/projects.html
+++ b/White/src/projects.html
@@ -77,109 +77,120 @@
     </div>
   </nav>
   <!-- NAVBAR ENDS -->
+  <div class="container-fluid row1">
+    <div class="row r0">
+      <div class="col-sm-4 ">
+      <div class="item" id="i1">
+        <span style="background-image:url(../public/images/proj1.jpg)"></span>
+        <h1 align="center" class="blockHead"><b>Analog and Digital Design</b></h1>
+        <div class="text-block">
+          <!-- <h3>Slide #4 is here</h3> -->
+          <div class="text" align="left">
+            <ul>
+            <li> Diesel engine monitoring systems</li>
+            <li> Ultra sonic Load Cell</li>
+            <li> Smart Flow, Pressure, Temperature sensors</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="item" id="i2">
+          <span style="background-image:url(../public/images/proj2.jpg)"></span>
+          <h1 align="center" class="blockHead"><b>Automotive</b></h1>
+          <div class="text-block">
+            <!-- <h3>Slide #4 is here</h3> -->
+            <div class="text" align="left">
+              <ul>
+      			<li> Vehicle Tracking Systems</li>
+      			<li> AIS-140 Compliant VTS</li>
+      			<li> Asset Trackers</li>
+      			<li> OBD-II based VTS</li>
+      			<li> CDI for Bikes</li>
+      		  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="item" id="i3">
+          <span style="background-image: url(../public/images/proj3.jpg)"></span>
+          <h1 align="center" class="blockHead"><b>Power Electronics</b></h1>
+          <div class="text-block">
+            <!-- <h3>Slide #4 is here</h3> -->
+            <div class="text" align="left">
+              <ul>
+      			<li> 5W – 500W SPMS, LED Drivers &amp; Battery Charger</li>
+      			<li> Digital SMPS / E-Rickshaw Charger</li>
+      			<li> PSR AC-DC for LED lighting</li>
+      			<li> Digital DC-DC Converters</li>
+      			<li> Variable Output SMPS</li>
+      		  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row r1">
+      <div class="col-sm-4">
+        <div class="item" id="i4">
+          <span style="background-image:url(../public/images/proj4.jpg)"></span>
+          <h1 align="center" class="blockHead"><b>Communication & IOT</b></h1>
+          <div class="text-block">
+            <!-- <h3>Slide #4 is here</h3> -->
+            <div class="text" align="left">
+              <ul>
+      			<li> USB 2.0 Based filed programmer</li>
+      			<li> TCP/IP, UDP &amp; HTTP based LED Display Boards</li>
+      			<li> Wi-Fi, GPRS &amp; Zigbee Enabled LED VMS</li>
+      			<li> Bluetooth printer for Queue Management</li>;
+      		  </li></ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="item" id="i5">
+          <span class="bg" style="background-image:url(../public/images/proj5.jpg)"></span>
+          <h1 align="center" class="blockHead"><b>LED Lighting & Display</b></h1>
+          <div class="text-block">
+            <!-- <h3>Slide #4 is here</h3> -->
+            <div class="text" align="left">
+              <ul>
+      			<li> True color LED Video Wall controllers</li>
+      			<li> Single Color LED Matrix controllers</li>
+      			<li> RDSO SPNTC-67 True color IPIS</li>
+      			<li> RDSO SPNTC-61 Single Color IPIS</li>
+      			<li> Production line display boards</li>
+      			<li> Advance Bus Display with GPS Based Route Announcment &amp; Tracking</li>
+      		  </ul>
 
-  <!------------------- Flexbox---------------------- -->
-  <div class="gallery gTop">
-  <div class="item">
-    <span style="background-image:url(../public/images/proj1.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>Analog and Digital Design</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-  			<li> Diesel engine monitoring systems</li>
-  			<li> Ultra sonic Load Cell</li>
-  			<li> Smart Flow, Pressure, Temperature sensors</li>
-  		  </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="item" id="i6">
+          <span style="background-image: url(../public/images/proj6.jpg)"></span>
+          <h1 align="center" class="blockHead"><b>Embedded Control & Automation</b></h1>
+          <div class="text-block">
+            <!-- <h3>Slide #4 is here</h3> -->
+            <div class="text" align="left">
+              <ul>
+        			<li> Residential and Industrial RO Controllers</li>
+        			<li> Digital queue management systems</li>
+        			<li> GPS Based Digital Clock</li>
+        			<li> Smart Home controller and DCU</li>
+        			<li> Smart Switch boards for Light, Fan etc.</li>
+        		  </ul>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  <div class="item">
-    <span style="background-image:url(../public/images/proj2.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>Automotive</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-			<li> Vehicle Tracking Systems</li>
-			<li> AIS-140 Compliant VTS</li>
-			<li> Asset Trackers</li>
-			<li> OBD-II based VTS</li>
-			<li> CDI for Bikes</li>
-		  </ul>
-      </div>
-    </div>
-  </div>
-  <div class="item">
-    <span style="background-image: url(../public/images/proj3.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>Power Electronics</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-			<li> 5W – 500W SPMS, LED Drivers &amp; Battery Charger</li>
-			<li> Digital SMPS / E-Rickshaw Charger</li>
-			<li> PSR AC-DC for LED lighting</li>
-			<li> Digital DC-DC Converters</li>
-			<li> Variable Output SMPS</li>
-		  </ul>
-      </div>
-    </div>
-  </div>
-</div>
-<div class="gallery">
-  <div class="item">
-    <span style="background-image:url(../public/images/proj4.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>Communication & IOT</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-			<li> USB 2.0 Based filed programmer</li>
-			<li> TCP/IP, UDP &amp; HTTP based LED Display Boards</li>
-			<li> Wi-Fi, GPRS &amp; Zigbee Enabled LED VMS</li>
-			<li> Bluetooth printer for Queue Management&gt;/li&gt;
-		  </li></ul>
-      </div>
-    </div>
-  </div>
-  <div class="item">
-    <span class="bg" style="background-image:url(../public/images/proj5.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>LED Lighting & Display</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-			<li> True color LED Video Wall controllers</li>
-			<li> Single Color LED Matrix controllers</li>
-			<li> RDSO SPNTC-67 True color IPIS</li>
-			<li> RDSO SPNTC-61 Single Color IPIS</li>
-			<li> Production line display boards</li>
-			<li> Advance Bus Display with GPS Based Route Announcment &amp; Tracking</li>
-		  </ul>
 
-      </div>
-    </div>
-  </div>
-  <div class="item">
-    <span style="background-image: url(../public/images/proj6.jpg)"></span>
-    <h1 align="center" class="blockHead"><b>Embedded Control & Automation</b></h1>
-    <div class="text-block">
-      <!-- <h3>Slide #4 is here</h3> -->
-      <div class="text" align="left">
-        <ul>
-  			<li> Residential and Industrial RO Controllers</li>
-  			<li> Digital queue management systems</li>
-  			<li> GPS Based Digital Clock</li>
-  			<li> Smart Home controller and DCU</li>
-  			<li> Smart Switch boards for Light, Fan etc.</li>
-  		  </ul>
-      </div>
-    </div>
-  </div>
-</div>
-;
-<!-- --------------------Flexbox ends----------------- -->
 
 <!-- ----------------------Footer--------------------- -->
 <footer class="pagefooter">
