--- a/White/src/etrack.html
+++ b/White/src/etrack.html
@@ -181,7 +181,7 @@
           <table class="table highlight">
             <thead class="thead1">
           <tr>
-            <th class="th1">Parameters</th>
+            <th >Parameters</th>
             <th>ETrack-100</th>
 
           </tr>
@@ -404,7 +404,7 @@
       <div class="modal-header">
         <div class="table1Head container" align="left"><b>Features</b></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span id="x" aria-hidden="true">X</span>
+          <span id="x" aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -480,7 +480,7 @@
       <div class="modal-header">
         <div class="table1Head container" align="left"><b>Features</b></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span id="x" aria-hidden="true">X</span>
+          <span id="x" aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -561,7 +561,7 @@
       <div class="modal-header">
         <div class="table1Head container" align="left"><b>Features</b></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span id="x" aria-hidden="true">X</span>
+          <span id="x" aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -632,11 +632,15 @@
 
 
 <!-- Device USP -->
-<div class="usp1Head container-fluid">Universal Selling Point</div>
-<div class="usp1 container-fluid">
-  <div class="row r0">
-     <div class="card card_usp">
-       <div class="card-content">
+
+<div class="usp1 container-fluid" align="center">
+  <div class="row r0" align="center">
+
+       <div class="col-sm-1"></div>
+       <div class="col-sm-10">
+         <div class="usp1Head container-fluid">Universal Selling Point</div>
+       <div class="card card_usp">
+       <div class="card-content" align="left">
 
          <ul>
 				 <li>1. Hard, Compact, Light-weight unit with Environment friendly IP67 or IP65 plastic casing.</li>
@@ -661,9 +665,12 @@
 			  </ul>
 
        </div>
+     </div>
+     <div class="col-sm-1"></div>
       </div>
    </div>
  </div>
+ <div class="sec2">
  <br><br>
  <div class="table2Head container-fluid" align="left"><b>Product Specifications</b></div><br>
  <div class="container-fluid feat2" align="center">
@@ -727,7 +734,7 @@
 
 <!-- End of Device USP -->
 
-
+</div>
 
 
 <!-- ___________________________________________________________________________ -->
@@ -790,7 +797,7 @@
       <div class="modal-header">
         <div class="table1Head container" align="left"><b>Features</b></div>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span id="x" aria-hidden="true">x</span>
+          <span id="x" aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
@@ -874,38 +881,44 @@
 
 
 <!-- Device USP -->
-<div class="usp1Head container-fluid">Universal Selling Point</div>
 <div class="usp1 container-fluid">
-  <div class="row">
-     <div class="card card_usp">
-       <div class="card-content">
+  <div class="row r0" align="center">
+
+       <div class="col-sm-1"></div>
+       <div class="col-sm-10">
+         <div class="usp1Head container-fluid">Universal Selling Point</div>
+       <div class="card card_usp">
+       <div class="card-content" align="left">
 
          <ul>
-        <li>1. Hard, Compact, Light-weight unit with Environment friendly IP65 plastic casing.</li>
-        <li>2. Smart data acquisition – Optimized based on Motion.</li>
-        <li>3. GPS Dark zone / multi path elimination using LBS &amp; Cell Tower Triangulation.</li>
-        <li>4. Dedicated single Touch Calling to 3 predefined numbers</li>
-        <li>5. Emergency (SOS) Alerts.</li>
-        <li>6. Inbuilt Vibrator, Loud Speaker &amp; Mic</li>
-        <li>7. Remote Log maintenance and support using SMS.</li>
-        <li>8. Configuration parameters can be updated through SMS / Server.</li>
-        <li>9. Configuration Parameters protected by Authenticate Password / Master number.</li>
-        <li>10. Configurable SMS Alerts. </li>
-        <li>11. Auto APN Setting overridden by manual APN Setting.</li>
-        <li>12. Events from I/O elements detection and sending via GPRS or SMS.</li>
-        <li>13. 5 Circular Geo-fencing inside device.</li>
-        <li>14. Generate Alerts for Internal Battery low voltage level.</li>
-        <li>15. Automated FOTA (firmware updating via GPRS in moving condition). </li>
-       </ul>
+           <li>1. Hard, Compact, Light-weight unit with Environment friendly IP65 plastic casing.</li>
+           <li>2. Smart data acquisition – Optimized based on Motion.</li>
+           <li>3. GPS Dark zone / multi path elimination using LBS &amp; Cell Tower Triangulation.</li>
+           <li>4. Dedicated single Touch Calling to 3 predefined numbers</li>
+           <li>5. Emergency (SOS) Alerts.</li>
+           <li>6. Inbuilt Vibrator, Loud Speaker &amp; Mic</li>
+           <li>7. Remote Log maintenance and support using SMS.</li>
+           <li>8. Configuration parameters can be updated through SMS / Server.</li>
+           <li>9. Configuration Parameters protected by Authenticate Password / Master number.</li>
+           <li>10. Configurable SMS Alerts. </li>
+           <li>11. Auto APN Setting overridden by manual APN Setting.</li>
+           <li>12. Events from I/O elements detection and sending via GPRS or SMS.</li>
+           <li>13. 5 Circular Geo-fencing inside device.</li>
+           <li>14. Generate Alerts for Internal Battery low voltage level.</li>
+           <li>15. Automated FOTA (firmware updating via GPRS in moving condition). </li>
+			  </ul>
 
        </div>
+     </div>
+     <div class="col-sm-1"></div>
       </div>
    </div>
+
  </div>
+ <div class="sec2 part2">
  <div class="table2Head container-fluid" align="left"><b>Product Specifications</b></div><br>
  <div class="container-fluid feat2" align="center">
-   <div>
-     <table class="table table2 highlight " style="width: 100%">
+      <table class="table table2 highlight" style="width: 100%">
        <thead class="thead2">
                 <tr>
                   <th>Parameters</th>
@@ -967,7 +980,7 @@
 
               </tbody>
             </table>
-   </div>
+
           </div>
 </div>
 
