--- a/White/index.html
+++ b/White/index.html
@@ -123,12 +123,12 @@
 <!-- Carousel Ends -->
 
 
-<div class="container-fluid contMain center">
+<!-- <div class="container-fluid contMain center">
   <div class="main" align="center">
     <div class="container-fluid">Embedded Designs Services</div>
     <div class="container-fluid cont2b">Converting Concept To Reality</div>
   </div>
-</div>
+</div> -->
 
 <div class="info container-fluid">
   <!-- <div class="row">
