--- a/White/src/about.html
+++ b/White/src/about.html
@@ -33,7 +33,7 @@
 
       <a class="navbar-brand js-scroll-trigger" href="../index.html"><img src="../public/images/EDS.png" width="30" height="30" padding-right="10" class="d-inline-block align-top" alt=""><b>EDS-India</b></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        MENU
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto my-2 my-lg-0">
