--- a/index.html
+++ b/index.html
@@ -390,14 +390,12 @@ concept to the working prototypes. With an average industry experience of over 1
 <div class="clients container-fluid" align="center">
 
   <div class="clientHead" align="center">Our Clients and Partners</div><hr>
-  <marquee><div class="row clt0">
-    <div class="col-sm-1"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/22M.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/AAI.jpg"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/Court.png"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/DAT.jpg"></div>
-    <div class="col-sm-2"><img class="partners" src="public/images/clients/EEC.png"></div>
-    <div class="col-sm-1"></div>
+  <marquee>
+    <img class="partners" src="public/images/clients/22M.png">
+    <img class="partners" src="public/images/clients/AAI.jpg">
+    <img class="partners" src="public/images/clients/Court.png">
+    <img class="partners" src="public/images/clients/DAT.jpg">
+    <img class="partners" src="public/images/clients/EEC.png">
 </marquee>
 </div>
 </div>
