--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           <img id="slide2logo" class="img-responsive" src="public/images/logo2.png">
 
           <p class="lead">
-            <button type="button" href="http://www.etrack-edsindia.in/Default.aspx" class="btn etrack btn-primary">Navigate to ETRACK</button><br>
+            <button type="button" onclick="navigate()" class="btn etrack btn-primary">Navigate to ETRACK</button><br>
             We offer professional design services which include hardware and software development, customizable product designs, Systems Engineering and Solutions to assist our end customers grow in this high speed techno-commercial era. </p>
         </div>
       </div>
